hphp/test/slow/await_as_an_expression/error/for3.php.expectf

Fatal error: Await cannot be used as an expression in this location because it's conditionally executed. in %s/for3.php on line 15
